overflow fixed

--- a/src/index.css
+++ b/src/index.css
@@ -1,20 +1,23 @@
-html, body {
+html {
   font-size: 15px;
   width: 100vw;
   height: 100vh;
   margin: 0;
   padding: 0;
+  overflow-x: hidden;
+  box-sizing: border-box;
 }
 
 #root, .container {
-  max-width: 100%;
+  width: 100%;
   min-height: 100%;
   margin: 0;
   padding: 0;
+  overflow-x: hidden;
 }
 
 .row {
-  max-width: 100%;
+  width: 100%;
   min-height: 100%;
   margin: 0;
   padding: 0;
@@ -128,6 +131,7 @@ a {
   text-align: center;
   font-size: 1em;
   margin-top: 0.93em;
+  margin-bottom: 1em;
   line-height: 25px;
 }
 
@@ -136,7 +140,7 @@ a {
   height: 3.73em;
   color: #333136;
   margin-top: 1.6em;
-  margin-bottom: 1.6em;
+  margin-bottom: 2.6em;
   padding: 1em;
   background-color: #FFFFFF;
   z-index: 100000000;
@@ -152,6 +156,7 @@ a {
   display: flex;
   justify-content: center;
   align-items: center;
+  overflow: hidden;
 }
 
 /* project buttons */
